# cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  node_modules  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
.claude-plugin/: mcp.json  plugin.json
.github/workflows/: swc-plugin.yml
assets/: layout-swc-plugin-35.wasm  layout-swc-plugin-57.wasm  layout-swc-plugin-90.wasm  layout-swc-plugin.wasm
docs/: E2E_TEST.md  cursor-plugin.md
kits/linear-lite/: DESIGN.md  kit.json  layout.md  tokens.css  tokens.json
kits/notion-lite/: DESIGN.md  kit.json  layout.md  tokens.css  tokens.json
kits/stripe-lite/: DESIGN.md  kit.json  layout.md  tokens.css  tokens.json
registry/linear-lite/: registry.json
registry/notion-lite/: registry.json
registry/stripe-lite/: registry.json
skills/layout-md/: SKILL.md
src/: index.ts  update-check.ts
src/cli/: add.ts  check.ts  diff.ts  doctor.ts  export.ts  fetch-kit.ts  import-tokens-json.ts  import-zip.ts  init.ts  install.ts  lint.ts  list.ts  live-notify.ts  live-open.ts  live-preflight.ts  registry-gen.ts  scan.ts  serve-local.ts  serve.ts  setup-utils.ts  use.ts
src/compliance/: checker.ts  rules.ts  suggest.ts
src/export/: agent-context.ts  css-blocks.ts  design-md.ts  kit-tokens.ts  managed-block.ts  registry.ts
src/install/: live.ts
src/integrations/: codebase-scan.ts  storybook.ts
src/kit/: loader.ts  parser.ts  registry.ts  stage.ts  types.ts
src/lint/: diff.ts  layout-md.ts
src/live/: schema.ts
src/mcp/: live-lock-store.ts  server.ts
src/mcp/tools/: _live-log.ts  _live-socket.ts  check-compliance.ts  check-setup.ts  design-in-figma.ts  get-component.ts  get-design-system.ts  get-live-screenshot.ts  get-pending-requests.ts  get-recent-visual-edits.ts  get-screenshots.ts  get-selected-element.ts  get-tokens.ts  list-components.ts  list-tokens.ts  list-ui-components.ts  lock-file.ts  mark-request.ts  open-live.ts  preview.ts  push-to-figma.ts  push-tokens-to-figma.ts  scan-project.ts  unlock-file.ts  update-tokens.ts  url-to-figma.ts
src/plugins/: transform.ts
src/plugins/next/: babel-loader.ts  index.ts  swc.ts
src/plugins/vite/: index.ts
src/preview/: ensure.ts  server.ts  transpile.ts  ws.ts
src/registry/: index.ts
swc-plugin/: Cargo.toml  README.md  build.sh
swc-plugin/src/: lib.rs
test/: _fake-electron.mjs  _run-check.ts  check-command.test.ts  check-compliance-format.test.ts  cli-electron-argv.test.ts  compliance-suggest.test.ts  export-command.test.ts  export-design-md.test.ts  get-live-screenshot.test.ts  install-live-agents.test.ts  install-live.test.ts  list-components-format.test.ts  list-tokens.test.ts  list-ui-components.test.ts  live-editing-classify.test.ts  live-notify.test.ts  live-open-discovery.test.ts  live-preflight.test.ts  live-schema.test.ts  live-socket-edge.test.ts  lock-store.test.ts  mark-request.test.ts  next-plugin.test.ts  parser-components.test.ts  registry-add.test.ts  registry-item.test.ts  socket-absent.test.ts  swc-parity.test.ts  swc-plugin.test.ts  tool-shape.test.ts  transform.test.ts  update-check.test.ts  update-tokens.test.ts  vite-plugin.test.ts  zod-schemas.test.ts
(+1 files in other folders)
