[package]
name = "layout_swc_plugin"
version = "0.1.0"
edition = "2021"
publish = false
description = "SWC source-tagging plugin for Layout Live (App Router / Turbopack parity with transform.ts)"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swc_core = { version = "68", features = [
  "ecma_plugin_transform",
  "ecma_visit",
  "ecma_ast",
  "ecma_utils",
  "common",
] }

# Wasm plugins must be small and self-contained. `-s` keeps size down while
# staying debuggable enough; LTO trims the swc_core surface we don't use.
[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
