[package]
name = "layout_swc_plugin"
version = "0.1.0"
edition = "2021"
publish = false
description = "SWC source-tagging plugin for Layout Live (App Router / Turbopack parity with transform.ts)"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# ABI pin: must match the swc_core bundled in the user's Next.js. Next 16.2.x
# ships swc_core 57 (current stable target; verified on Next 16.2.7: tags serve
# under default Turbopack dev, `--webpack` dev, AND `next build` succeeds; the
# parity-test host is @swc/core 1.15.0). Next bumps swc_core almost every minor
# (15.5->35, 16.0->45, 16.1->49, 16.2->57) — re-pin + rebuild when moving the
# supported baseline, then update the @swc/core devDependency to a matching ABI.
# JSXAttrValue variant tracks the pin: >=~45 uses Str(Str); <=35 used Lit(Lit).
# See swc-plugin/README.md.
swc_core = { version = "=57.0.0", features = [
  "ecma_plugin_transform",
  "ecma_visit",
  "ecma_ast",
  "ecma_utils",
  "common",
] }

# Wasm plugins must be small and self-contained. `-s` keeps size down while
# staying debuggable enough; LTO trims the swc_core surface we don't use.
[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
